style.css
/* ---------general--------- */

* {
    margin: 0;
    padding: 0;
    /* setting the font */
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
}

body {
    background: #fff;
    color: #555;
}

p {
    font-size: 24px;
    margin-bottom: 40px;
}

.container {
    padding: 10px 10%;
}

/* -------------header------------- */

#header {
    width: 100%;
    height: 15vh;
}

#header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 20px;
}


#header span {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.logo {
    width: 160px;
}

nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    display: inline-block;
    margin-left: 30px;
}

nav ul li:first-child {
    margin-left: 0;
}

nav ul li a {
    text-decoration: none;
    color: #333;
    font-size: 24px;
    position: relative;
    border-bottom: 2px solid transparent;
    /* Set initial border */
    transition: border-bottom 0.3s ease;
    /* Add transition */
}

nav ul li a:hover {
    border-bottom: 2px solid #F44611;
    /* Change border color on hover */
}

/* ----------banner---------- */
.banner-wrapper {
    width: 100%;
    max-height: 400px; /* Adjust the max-width as needed */
    margin: 0 auto; /* Center the banner horizontally */
    overflow: hidden; /* Hide the arrows that overflow */
}

.banner {
    height: 400px;
    position: relative; /* Added position relative for arrow positioning */
}

/* Left and Right Buttons */
.arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: auto; /* Adjust width as needed */
    height: auto; /* Adjust height as needed */
    background-color: rgba(255, 255, 255, 0.5); /* Slightly transparent */
    cursor: pointer;
    z-index: 1; /* Ensure buttons are above the images */
    font-family: Arial, sans-serif; /* Change font family as needed */
}

.left-arrow {
    left: 10px;
}

.right-arrow {
    right: 10px;
}

/* Text styles for buttons */
.navarrow {
    display: inline-block;
    padding: 10px 20px;
    background-color: rgba(244, 70, 17, 0.5); /* Semi-transparent background color */
    color: #fff;
    font-size: 16px; /* Adjust font size as needed */
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease, color 0.3s ease, transform 0.5s ease;
}

.navarrow:hover {
    background-color: rgba(255, 125, 86, 0.8); /* Semi-transparent hover background color */
    color: #ffffff;
    transform: scale(1.05);
}



/* Gallery Images */

.image-gallery img {
    width: 100%;
    height: 400px; /* Set a fixed height */
    object-fit: cover; /* Cover the entire container */
    object-position: center; /* Show the center of the image */
}

.image-gallery figure {
    position: relative;
    margin: 0;
  }
  
  .image-gallery figcaption {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
    color: white;
    padding: 10px;
    box-sizing: border-box;
  }
  

/* -------------info------------------- */

#info .container {
    text-align: center;
    padding-top: 40px;
}

#info .container span {
    color: #F44611;
    font-weight: bold;
}

/* -------------buttons------------- */

#buttons {
    text-align: center;
    padding-top: 10px;
}

.button {
    display: inline-block;
    padding: 20px 40px;
    background-color: #F44611;
    color: #fff;
    font-size: 40px;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s ease, color 0.3s ease, transform 0.5s ease;
}

.button:hover {
    background-color: #ff7d56;
    color: #ffffff;
    transform: scale(1.05);
}

/* --------------Registration form--------- */
/* --------------Modal---------------- */
.modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    /* Semi-transparent background */
    overflow: auto;
    backdrop-filter: blur(5px);
    /* Apply blur effect to background */
}

#form-ct {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 600px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    /* Center modal */
    z-index: 1001;
    /* Ensure modal content is above modal overlay */
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}


/* Style for form div */
#form-ct form div {
    margin-bottom: 20px;
}

h2 {
    margin-bottom: 10px;
}

input[type="text"],
input[type="password"],
input[type="tel"],
input[type="email"] {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

input[type="submit"] {
    background-color: #F44611;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

input[type="submit"]:hover {
    background-color: #ff7d56;
}

